--- a/foxtail-farms/css/science.css
+++ b/foxtail-farms/css/science.css
@@ -53,6 +53,14 @@ body {
     width: 25%;
     object-fit: cover;
 }
+span p{
+    padding: 50px;
+    background-color: #040707;
+    margin: 0px;
+    color: white;
+    text-align: center;
+    border-radius: 30px;
+}
 #paragraph {
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
