--- a/foxtail-farms/css/about.css
+++ b/foxtail-farms/css/about.css
@@ -29,12 +29,12 @@ body {
 }
 
 /* about us header */
-#about-us {
+.about-us {
     padding: 48px;
     background-color: #040707;
     color: white;
 }
-#about-us h3 {
+.about-us h2 {
     font-family: 'Lobster', cursive;
     font-size: 35px;
     color: white;
@@ -42,12 +42,12 @@ body {
     padding: 15px;
     display: table;
 }
-#about-us p{
+.about-us p{
     padding-right: 45px;
     padding-bottom: 35px;
     font-family: 'Montserrat', sans-serif;
 }
-#about-us span a {
+.about-us span a {
     background-color: white;
     color: #040707;
     padding: 10px;
@@ -55,14 +55,51 @@ body {
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
 }
-#about-us span a:hover {
+.about-us span a:hover {
     background-color: #E3A479;
     color: white;
 }
-#big-logo img {
+.big-logo img {
     width: 400px;
 }
 #header {
     display: flex;
     background-color: #040707
+}
+
+/* cards */
+.single-col {
+    max-width: 900px;
+    margin: 0px auto;
+}
+#three-cards {
+    background-color: white;
+    color: #040707;
+    padding: 48px;
+}
+.card-contain {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+.card {
+    flex: 1;
+    border: 1px solid #333;
+    padding: 36px;
+    text-align: center;
+    margin: 0px;
+    border-radius: 40px;
+}
+.card h3 {
+    font-size: 36px;
+    margin: 0px;
+}
+.card p {
+    font-size: 24px;
+    margin: 24px 0px 0px;
+}
+.card img {
+    width: 150px;
+    height: 150px;
+    object-position: center center;
 }
