--- a/exercises/restaurant/css/name.css
+++ b/exercises/restaurant/css/name.css
@@ -15,7 +15,7 @@ body {
     text-decoration: none;
     color: #ED4727;
     padding: 24px;
-    font-size: 25px;
+    font-size: 30px;
 }
 #navbar a:hover {
     text-decoration: underline;
@@ -55,4 +55,43 @@ body {
 }
 #button img {
     width: 50px;
+}
+
+
+
+
+#footer {
+    background-color: #FFEFDE;
+    padding: 12px;
+}
+#footer a {
+    text-decoration: none;
+    color: #ED4727;
+}
+#footer-navbar {
+    width: 800px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-between;
+}
+#footer-columns-navbar {
+    width: 800px;
+    margin: 0px auto;
+    padding: 48px 0px;
+    display: flex;
+    justify-content: space-between;
+}
+#footer-columns-navbar img {
+    width: 100px;
+}
+#footer-columns-navbar a {
+    display: block;
+    padding: 8px 0px;
+    text-decoration: none;
+    color: black
+}
+#layout {
+    width: 800px;
+    margin: 48px auto;
+    font-size: 24px;
 }
