--- a/final-eval/css/name.css
+++ b/final-eval/css/name.css
@@ -9,6 +9,7 @@ body {
     min-width: 500px;
     margin: 0px auto;
     background-color: gray;
+    padding: 15px;
 }
 #top-text {
     text-align: center;
@@ -20,6 +21,7 @@ body {
     margin-left: 10%;
     margin-right: 10%;
     text-align: center;
+    color: white
 }
 #left img {
     width: 150px;
@@ -28,4 +30,17 @@ body {
 #right img {
     width: 150px;
     border: 3px solid black;
+}
+#vs p {
+    text-align: center;
+    margin-top: 100px;
+    font-size: 30px;
+}
+#bottom-text {
+    text-align: center;
+    color: white;
+}
+#buttons {
+    display: flex;
+    justify-content: space-around;
 }
