--- a/final-eval/css/name.css
+++ b/final-eval/css/name.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Montserrat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tinos&display=swap');
 * {
     box-sizing: border-box;
 }
@@ -8,12 +10,23 @@ body {
     width: 50%;
     min-width: 500px;
     margin: 0px auto;
-    background-color: gray;
+    background-color: #f4b9a4;
     padding: 15px;
 }
 #top-text {
     text-align: center;
-    color: white;
+    color: #043c5c;
+}
+#top-text h4 {
+    font-family: 'Tinos', serif;
+}
+#top-text h1 {
+    font-family: 'Black Ops One', cursive;
+    font-size: 40px;
+}
+#top-text h2 {
+    font-family: 'Tinos', serif;
+    padding-bottom: 20px;
 }
 #vs {
     display: flex;
@@ -21,7 +34,7 @@ body {
     margin-left: 10%;
     margin-right: 10%;
     text-align: center;
-    color: white
+    color: #043c5c;
 }
 #left img {
     width: 150px;
@@ -38,9 +51,23 @@ body {
 }
 #bottom-text {
     text-align: center;
-    color: white;
+    color: #043c5c;
+}
+#bottom-text h1 {
+    font-family: 'Black Ops One', cursive;
+    font-size: 30px;
 }
 #buttons {
     display: flex;
     justify-content: space-around;
+}
+.left {
+    border: 2px solid red;
+    padding: 10px;
+    border-radius: 20px;
+}
+.right {
+    border: 2px solid red;
+    padding: 10px;
+    border-radius: 20px;
 }
