--- a/final-eval/css/name.css
+++ b/final-eval/css/name.css
@@ -84,6 +84,11 @@ body {
     text-decoration: none;
     font-size: 20px
 }
+.left:hover {
+    background-color: white;
+    color: #043c5c;
+    box-shadow: 3px 3px 8px;
+}
 .right {
     padding: 20px;
     border-radius: 20px;
@@ -92,7 +97,13 @@ body {
     text-decoration: none;
     font-size: 20px
 }
+.right:hover {
+    background-color: white;
+    color: #043c5c;
+    box-shadow: 3px 3px 8px;
+}
 #last {
     text-align: center;
     color: #043c5c;
+    font-family: 'Tinos', serif;
 }
