--- a/final-eval/css/name.css
+++ b/final-eval/css/name.css
@@ -107,32 +107,36 @@ body {
     color: #043c5c;
     font-family: 'Tinos', serif;
 }
-@media only screen and (max-width: 600px) {
-    #top-text {
-        display: flex;
+@media only screen and (max-width: 600px) and (min-width: 200px) {
+    .center {
+        width: 50%;
+        min-width: 200px;
+        margin: 0px auto;
+        background-color: #f4b9a4;
+        padding: 15px;
     }
     #top-text h4 {
         font-size: 7px;
     }
     #top-text h1 {
-        font-size: 15px;
+        font-size: 20px;
     }
     #top-text h2 {
         font-size: 10px;
     }
-    #vs {
-        display: flex;
-    }
     #left img {
-        width: 10%;
+        width: 90%;
         border: 1px solid black;
+    }
+    #left h4 {
+        font-size: 7px;
     }
     #right img {
-        width: 10%;
+        width: 90%;
         border: 1px solid black;
     }
-    #bottom-text {
-        display: flex;
+    #right h4 {
+        font-size: 7px;
     }
     #bottom-text h1 {
         font-size: 15px;
@@ -143,14 +147,13 @@ body {
     #bottom-text h5 {
         font-size: 5px;
     }
-    #buttons {
-        display: flex;
-    }
     .left {
         font-size: 10px;
+        padding: 7px;
     }
     .right {
         font-size: 10px;
+        padding: 7px;
     }
     #last h5 {
         font-size: 5px;
