--- a/css/contact.css
+++ b/css/contact.css
@@ -28,3 +28,42 @@ body {
 }
 
 /* contact page */
+#layout {
+    display: flex;
+    padding: 15px;
+    padding-bottom: 30px;
+    margin: 48px auto;
+    justify-content: space-evenly;
+    background-color: #b9bab5;
+}
+.form span {
+    display: block;
+    padding-top: 20px;
+    border-bottom: 3px solid #717568;
+    color: #9e9e9e;
+}
+.fill1 {
+    background-color: #E1F4CB;
+    margin-bottom: 15px;
+}
+.fill2 {
+    background-color: #E1F4CB;
+    margin-bottom: 15px;
+}
+.fill3 {
+    background-color: #E1F4CB;
+    margin-bottom: 15px;
+}
+.form a {
+    text-decoration: none;
+    background-color: #717568;
+    padding: 10px;
+    color: white;
+    border-radius: 20px;
+    font-size: 15px;
+    text-align: center;
+}
+.form a:hover {
+    background-color: #9e9e9e;
+    color: #333;
+}
