--- a/css/contact.css
+++ b/css/contact.css
@@ -40,32 +40,40 @@ body {
     display: block;
     padding-top: 20px;
     border-bottom: 3px solid #717568;
-    color: #9e9e9e;
+    color: #a39292;
 }
 .fill1 {
     background-color: #E1F4CB;
     margin-bottom: 15px;
 }
+.fill1:hover {
+    box-shadow: inset 0px 8px 16px -6px black;
+}
 .fill2 {
     background-color: #E1F4CB;
     margin-bottom: 15px;
+}
+.fill2:hover {
+    box-shadow: inset 0px 8px 16px -6px black;
 }
 .fill3 {
     background-color: #E1F4CB;
     margin-bottom: 15px;
 }
+.fill3:hover {
+    box-shadow: inset 0px 8px 16px -6px black;
+}
 .form a {
     text-decoration: none;
-    background-color: #717568;
+    background-color: white;
     padding: 10px;
-    color: white;
+    color: #717568;
     border-radius: 20px;
     font-size: 15px;
     text-align: center;
 }
 .form a:hover {
-    background-color: #9e9e9e;
-    color: #333;
+    box-shadow: 3px 3px 6px black;
 }
 
 /* media query */
