--- a/css/about.css
+++ b/css/about.css
@@ -1,23 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Poppins:wght@100;200&display=swap');
-
 * {
     box-sizing: border-box;
 }
 body {
     font-family: sans-serif;
-    background-color: white;
+    background-color: #ECDD7B;
 }
 #main-components {
     text-align: center;
     margin: 0px auto;
     padding-bottom: 30px;
     padding-top: 5px;
-    background-color: #E1F4CB;
-    color: black;
+    background-color: #6a5749;
+    color: #ECDD7B;
 }
 #main-components a{
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 10px;
 }
 #main-components a:hover{
@@ -51,7 +49,7 @@ body {
 #header h3 {
     font-size: 30px;
     text-align: center;
-    background-color: #717568;
+    background-color: #CE8147;
     color: white;
     padding: 10px;
     border-radius: 30px;
@@ -69,10 +67,9 @@ body {
 .header-text h4 {
     font-size: 20px;
     text-align: center;
-    background-color: #BACBA9;
-    color: black;
+    background-color: #2D4739;
+    color: white;
     padding: 3px;
-    border-radius: 10px;
 }
 ul {
     font-size: 0;
