--- a/css/contact.css
+++ b/css/contact.css
@@ -3,7 +3,7 @@
 }
 body {
     font-family: sans-serif;
-    background-color: white;
+    background-color: #ECDD7B;
 }
 
 #main-components {
@@ -11,12 +11,12 @@ body {
     margin: 0px auto;
     padding-bottom: 30px;
     padding-top: 5px;
-    background-color: #E1F4CB;
-    color: black;
+    background-color: #6a5749;
+    color: #ECDD7B;
 }
 #main-components a {
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 10px;
 }
 #main-components a:hover{
@@ -34,7 +34,7 @@ body {
     padding-bottom: 30px;
     margin: 48px auto;
     justify-content: space-evenly;
-    background-color: #b9bab5;
+    background-color: #CE8147;
 }
 .form span {
     display: block;
@@ -43,37 +43,43 @@ body {
     color: #a39292;
 }
 .fill1 {
-    background-color: #E1F4CB;
+    background-color: #e9e9e9;
     margin-bottom: 15px;
 }
 .fill1:hover {
     box-shadow: inset 0px 8px 16px -6px black;
+    transition: 0.2s;
 }
 .fill2 {
-    background-color: #E1F4CB;
+    background-color: #e9e9e9;
     margin-bottom: 15px;
 }
 .fill2:hover {
     box-shadow: inset 0px 8px 16px -6px black;
+    transition: 0.2s;
 }
 .fill3 {
-    background-color: #E1F4CB;
+    background-color: #e9e9e9;
     margin-bottom: 15px;
 }
 .fill3:hover {
     box-shadow: inset 0px 8px 16px -6px black;
+    transition: 0.2s;
 }
 .form a {
     text-decoration: none;
-    background-color: white;
+    background-color: #ECDD7B;
     padding: 10px;
-    color: #717568;
+    color: black;
     border-radius: 20px;
     font-size: 15px;
     text-align: center;
 }
 .form a:hover {
-    box-shadow: 3px 3px 6px black;
+    background-color: #6a5749;
+    color: white;
+    opacity: 100%;
+    transition: 0.5s;
 }
 
 /* media query */
