--- a/css/gallery.css
+++ b/css/gallery.css
@@ -4,19 +4,19 @@
 }
 body {
     font-family: sans-serif;
-    background-color: white;
+    background-color: #ECDD7B;
 }
 #main-components {
     text-align: center;
     margin: 0px auto;
     padding-bottom: 30px;
     padding-top: 5px;
-    background-color: #E1F4CB;
-    color: black;
+    background-color: #6a5749;
+    color: #ECDD7B;
 }
 #main-components a {
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 10px;
 }
 #main-components a:hover{
@@ -37,7 +37,7 @@ body {
     columns: 3 8.5vw;
     gap: 10px;
     padding: 24px;
-    background-color: #EBEBEB;
+    background-color: #e9e9e9;
 }
 .mixed-layout img {
     width: 90%;
@@ -45,7 +45,7 @@ body {
 }
 h3 {
     font-size: 30px;
-    background-color: #717568;
+    background-color: #CE8147;
     color: white;
     padding: 10px;
     border-radius: 30px;
@@ -59,8 +59,8 @@ p {
     padding-bottom: 15px;
 }
 .title {
-    background-color: #BACBA9;
-    color: black;
+    background-color: #2D4739;
+    color: white;
     padding: 3px;
     border-radius: 10px;
 }
