--- a/css/index.css
+++ b/css/index.css
@@ -3,15 +3,15 @@
 }
 body {
     font-family: sans-serif;
-    background-color: white;
+    background-color: #ECDD7B;
 }
 #main-components {
     text-align: center;
     margin: 0px auto;
     padding-bottom: 30px;
     padding-top: 5px;
-    background-color: #E1F4CB;
-    color: black;
+    background-color: #6a5749;
+    color: #ECDD7B;
 }
 #main-components a:hover{
     box-shadow: 5px 3px 3px #333;
@@ -22,7 +22,7 @@ body {
 }
 #main-components a {
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 10px;
 }
 
@@ -53,7 +53,7 @@ h3 {
     border-radius: 30px;
 }
 #layout a {
-    background-color: #EBEBEB;
+    background-color: #561D25;
     padding: 24px;
     border-radius: 30px;
     color: black;
@@ -61,7 +61,7 @@ h3 {
     border: 2px solid black;
 }
 #layout a:hover {
-    background-color: #E1F4CB;
+    background-color: #561D25;
 }
 
 
@@ -80,14 +80,14 @@ h3 {
     padding: 24px;
     margin: 24px;
     text-align: center;
-    background-color: #717568;
+    background-color: #CE8147;
     border-radius: 30px
 }
 #cards h2 {
     font-size: 25px;
     margin: 0px;
     color: white;
-    border: 5px solid #E1F4CB;
+    border: 5px solid #6a5749;
     padding: 15px;
     border-radius: 30px;
 }
@@ -101,9 +101,9 @@ h3 {
     text-decoration: none;
 }
 #cards h2:hover {
-    background-color: #E1F4CB;
+    background: #ECDD7B;
     border: 5px solid transparent;
-    color: #717568
+    color: #6a5749
 }
 
 @media only screen and (max-width: 1000px) and (min-width: 100px) {
