--- a/css/contact.css
+++ b/css/contact.css
@@ -22,7 +22,7 @@ body {
 #main-components a:hover{
     box-shadow: 5px 3px 3px #333;
     background-color: #717568;
-    color: #EBEBEB;
+    color: #e9e9e9;
     border-radius: 20px;
     padding: 10px;
 }
