--- a/css/contact.css
+++ b/css/contact.css
@@ -21,10 +21,11 @@ body {
 }
 #main-components a:hover{
     box-shadow: 5px 3px 3px #333;
-    background-color: #717568;
-    color: #e9e9e9;
+    background-color: #CE8147;
+    color: #EBEBEB;
     border-radius: 20px;
     padding: 10px;
+    transition: 0.5s;
 }
 
 /* contact page */
