--- a/css/index.css
+++ b/css/index.css
@@ -15,10 +15,11 @@ body {
 }
 #main-components a:hover{
     box-shadow: 5px 3px 3px #333;
-    background-color: #717568;
+    background-color: #CE8147;
     color: #EBEBEB;
     border-radius: 20px;
     padding: 10px;
+    transition: 0.5s;
 }
 #main-components a {
     text-decoration: none;
