--- a/css/about.css
+++ b/css/about.css
@@ -80,3 +80,20 @@ ul {
 li {
     font-size: 15px;
 }
+
+/* Footer */
+#footer {
+    background-color: #6a5749;
+    color: #ECDD7B;
+    padding: 15px;
+    text-align: center;
+}
+#footer a {
+    text-decoration: none;
+    color: white;
+}
+.foot-nav {
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+}
