--- a/css/contact.css
+++ b/css/contact.css
@@ -83,6 +83,23 @@ body {
     transition: 0.5s;
 }
 
+/* Footer */
+#footer {
+    background-color: #6a5749;
+    color: #ECDD7B;
+    padding: 15px;
+    text-align: center;
+}
+#footer a {
+    text-decoration: none;
+    color: white;
+}
+.foot-nav {
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
 /* media query */
 @media only screen and (max-width: 1000px) and (min-width: 100px) {
     #layout {
