--- a/css/gallery.css
+++ b/css/gallery.css
@@ -66,6 +66,23 @@ p {
     border-radius: 10px;
 }
 
+/* Footer */
+#footer {
+    background-color: #6a5749;
+    color: #ECDD7B;
+    padding: 15px;
+    text-align: center;
+}
+#footer a {
+    text-decoration: none;
+    color: white;
+}
+.foot-nav {
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
 @media only screen and (max-width: 1000px) and (min-width: 100px) {
     #layout {
         max-width: 60%;
