--- a/css/index.css
+++ b/css/index.css
@@ -107,6 +107,23 @@ h3 {
     color: #6a5749
 }
 
+/* Footer */
+#footer {
+    background-color: #6a5749;
+    color: #ECDD7B;
+    padding: 15px;
+    text-align: center;
+}
+#footer a {
+    text-decoration: none;
+    color: white;
+}
+.foot-nav {
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
 @media only screen and (max-width: 1000px) and (min-width: 100px) {
     .column {
         min-width: 20px;
