--- a/css/contact.css
+++ b/css/contact.css
@@ -42,6 +42,7 @@ body {
     padding-top: 20px;
     border-bottom: 3px solid #717568;
     color: #a39292;
+    width: 300px;
 }
 .fill1 {
     background-color: #e9e9e9;
