--- a/css/contact.css
+++ b/css/contact.css
@@ -37,51 +37,10 @@ body {
     justify-content: space-evenly;
     background-color: #CE8147;
 }
-.form span {
-    display: block;
-    padding-top: 20px;
-    border-bottom: 3px solid #717568;
-    color: #a39292;
-    width: 300px;
-}
-.fill1 {
-    background-color: #e9e9e9;
-    margin-bottom: 15px;
-}
-.fill1:hover {
-    box-shadow: inset 0px 8px 16px -6px black;
-    transition: 0.2s;
-}
-.fill2 {
-    background-color: #e9e9e9;
-    margin-bottom: 15px;
-}
-.fill2:hover {
-    box-shadow: inset 0px 8px 16px -6px black;
-    transition: 0.2s;
-}
-.fill3 {
-    background-color: #e9e9e9;
-    margin-bottom: 15px;
-}
-.fill3:hover {
-    box-shadow: inset 0px 8px 16px -6px black;
-    transition: 0.2s;
-}
-.form a {
-    text-decoration: none;
-    background-color: #ECDD7B;
+#right-content a img {
+    width: 100px;
     padding: 10px;
-    color: black;
-    border-radius: 20px;
-    font-size: 15px;
-    text-align: center;
-}
-.form a:hover {
-    background-color: #6a5749;
-    color: white;
-    opacity: 100%;
-    transition: 0.5s;
+    text-decoration: none;
 }
 
 /* Footer */
