unified contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -35,7 +35,7 @@ body {
     padding-bottom: 30px;
     margin: 48px auto;
     justify-content: space-evenly;
-    background-color: #CE8147;
+    background-color: #EBEBEB;
 }
 #right-content a img {
     width: 100px;
