--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
 }
 #hero a {
     font-size: 7vw;
