--- a/css/contact.css
+++ b/css/contact.css
@@ -126,12 +126,16 @@ input:not(:focus):not(:placeholder-shown):invalid {
     #layout {
         display: block;
         margin: 48px auto;
-        width: 200px;
+        text-align: center;
     }
     #left-content h3 {
         visibility: hidden;
     }
     .foot-nav {
         font-size: 10px;
+    }
+    #form-layout {
+        margin: 48px auto;
+        width: 450px;
     }
 }
