--- a/css/contact.css
+++ b/css/contact.css
@@ -36,6 +36,7 @@ body {
     margin: 48px auto;
     justify-content: space-evenly;
     background-color: #EBEBEB;
+    max-width: 800px;
 }
 #right-content a img {
     width: 100px;
@@ -62,7 +63,7 @@ body {
 
 /* form */
 #form-layout {
-    width: 500px;
+    max-width: 800px;
     margin: 0px auto;
     margin-top: 20px;
 }
